--- a/src/app/components/products/digital/digital-add/digital-add.component.html
+++ b/src/app/components/products/digital/digital-add/digital-add.component.html
@@ -121,11 +121,18 @@
 
                                         
                                     </div>
-                                    <div class="form-group">
+                                    <!-- <div class="form-group">
                                         <label for="category" class="col-form-label pt-0"><span>*</span> Category</label>
                                         <select  id="category" formControlName="category" >
                                             <option selected>Select</option>
                                             <option *ngFor="let c of categories" [ngValue]="c.category_id">{{c.category_name}}</option>
+                                        </select>
+                                    </div> -->
+                                    <div class="form-group">
+                                        <label class="col-form-label"><span>*</span> Categories</label>
+                                        <select class="custom-select">
+                                            <option value="">--Select--</option>
+                                            <option *ngFor="let c of categories" [ngValue]="c.cat_id">{{c.cat_name}}</option>
                                         </select>
                                     </div>
                                     
