--- a/src/app/components/products/digital/digital-list/digital-list.component.html
+++ b/src/app/components/products/digital/digital-list/digital-list.component.html
@@ -12,7 +12,6 @@
                             <table class="table table-striped table-bordered">
                                 <thead>
                                   <tr>
-                                    <th>Product Id</th>
                                     <th>Product Title</th>
                                     <th>Brand</th>
                                     <th>Status</th>
@@ -21,10 +20,9 @@
                                 </thead>
                                 <tbody>
                                   <tr *ngFor="let row of products_list">
-                                    <td>{{row.prod_id}}</td>
                                     <td>{{row.prod_name}}</td>
                                     <td>{{row.brand_name}}</td>
-                                    <td>{{row.prod_status}}</td>
+                                    <td>{{row.prod_status === '1' ? 'Active' : 'Inactive'}}</td>
                                     <td>
                                         <div class="row">
                                             <div class="col-md-2">
