Interceptor current time changes. Default selection in select dropdown

--- a/src/app/components/products/digital/digital-list/digital-list.component.html
+++ b/src/app/components/products/digital/digital-list/digital-list.component.html
@@ -19,7 +19,7 @@
                                   </tr>
                                 </thead>
                                 <tbody>
-                                  <tr *ngFor="let row of products_list">
+                                  <tr *ngFor="let row of productsList">
                                     <td>{{row.prod_name}}</td>
                                     <td>{{row.brand_name}}</td>
                                     <td>{{row.prod_status === '1' ? 'Active' : 'Inactive'}}</td>
