adding tentitive delivery date and updating changes

--- a/src/app/components/sales/others/others.component.html
+++ b/src/app/components/sales/others/others.component.html
@@ -14,6 +14,7 @@
                                 </div>
                                 <button type="submit" class="btn btn-primary mr-1">Add</button>  
                             </div>
+                            <div *ngIf="successMsg"><span>Updated Successfully!</span></div>
                         </div>
                     </div>
                 </div>
